Add example for using Java's source launcher